Change responsive for 768px and fix bug where second content is not aligned

--- a/main.css
+++ b/main.css
@@ -5,29 +5,33 @@ body {
     overflow-x: hidden;
 }
 
-header{
+header {
     background-color: white;
     margin-left: 60px;
     margin-right: 60px;
 }
-li{
+
+li {
     list-style: none;
 }
-a{
+
+a {
     text-decoration: none;
     color: black;
 }
+
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding: auto; 
+    width: 100%;
+    padding: auto;
     margin: 15px;
 }
 
 .nav-logo {
     flex-shrink: 0;
-    margin-left: 60px; 
+    margin-left: 6%;
 }
 
 .nav-menu {
@@ -36,12 +40,12 @@ a{
 }
 
 .nav-menu li {
-    margin-left: 20px; 
+    margin-left: 20px;
 }
 
 .nav-menu a {
     text-decoration: none;
-    color: black; 
+    color: black;
     padding: auto;
     margin-right: 20px;
 }
@@ -49,9 +53,10 @@ a{
 .hamburger {
     display: none;
 }
+
 .hero {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: auto;
     width: 100wh;
@@ -59,12 +64,12 @@ a{
     font-weight: bold;
     background-image: url('Pictures/Rectangle 29.png');
     position: relative;
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
 }
 
 .hero.img {
-    position: absolute;
+    position: relative;
     object-fit: cover;
     z-index: -1;
 }
@@ -84,9 +89,11 @@ a{
     padding-top: 20px;
     margin-left: 15px;
 }
-.text-content{
+
+.text-content {
     margin-left: 0px;
 }
+
 .text-content h1 {
     font-size: 50px;
     color: #333;
@@ -218,18 +225,21 @@ a{
 .second-content {
     display: flex;
     align-items: center;
-    height: auto;
-    width: auto;
+    position: relative;
+    height: 100%;
+    width: 100%;
     font-family: Lexend;
     font-weight: bold;
-    position: relative;
-    justify-content: center;
+    justify-content: space-around;
 }
+
 .second-container {
-    max-width: 1200px;
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 20px;
 }
+
 .highlight {
     color: #2d9cdb;
 }
@@ -237,22 +247,24 @@ a{
 .card-content {
     position: relative;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 33px;
-    row-gap: 10px;
-    z-index: 1;
-    width: 100px;
-    height: 100px;
+    grid-template-columns: auto auto;
+    column-gap: 3%;
+    row-gap: 3%;
     padding: auto;
-    text-align: left;
-    margin-left: 150px;
+    /* margin-left: auto; */
 }
 
-.second-content h2 {
-    font-size: 33px;
+.second-content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.second-container h2 {
+    font-size: 50px;
     color: #2F4858;
-    margin-top: 10px;
-    margin-left: 150px;
+    margin-left:23%;
 }
 
 .card {
@@ -284,24 +296,27 @@ a{
     padding-bottom: 15px;
 }
 
-
 .card-bg {
-    margin-top: 70px;
-    position: absolute;
-    z-index: 0;
+    position: relative;
+    top: 0;
+    right: 110px;
+    z-index: -1;
+    width: auto;
+    height: 100%;
 }
 
 .card-bg img {
     height: auto;
-    width: 500px;
-    transform: translate(1040px, -270px);
+    object-fit: cover;
 }
 
-.hamburger{
+
+.hamburger {
     display: none;
     cursor: pointer;
 }
-.bar{
+
+.bar {
     display: block;
     width: 25px;
     height: 3px;
@@ -313,18 +328,26 @@ a{
 }
 
 @media (max-width: 768px) {
-    .hamburger{
-        display: block;
+    body{
+        /* overflow-x: hidden; */
     }
-    .hamburger.active .bar:nth-child(2){
+    .hamburger {
+        display: block;
+        margin-right: 100px;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
         opacity: 0;
     }
-    .hamburger.active .bar:nth-child(1){
+
+    .hamburger.active .bar:nth-child(1) {
         transform: translateY(8px) rotate(45deg);
     }
-    .hamburger.active .bar:nth-child(3){
-        transform:  translateY(-8px) rotate(-45deg);
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
     }
+
     .nav-menu {
         position: fixed;
         right: -200%;
@@ -336,21 +359,34 @@ a{
         text-align: center;
         transition: right 0.3s ease;
     }
-    header{
+
+    header {
         margin-left: 0;
         margin-right: 0;
     }
-    .hamburger.active + .nav-menu{
+
+    .hamburger.active+.nav-menu {
         right: 0;
         z-index: 1;
         position: absolute;
     }
-    .nav-item{
+    .navbar{
+        justify-content: space-between;
+        /* margin: auto; */
+        /* width: 100%; */
+    }
+    .nav-logo{
+        margin-left:0;
+        margin-left:100px;
+    }
+    .nav-item {
         margin: 16px 0;
     }
-    .nav-menu.active{
+
+    .nav-menu.active {
         left: 0;
     }
+
     .hero {
         height: 100%;
         width: 100%;
@@ -361,9 +397,11 @@ a{
         flex-direction: column;
         padding-top: 0;
     }
-    .text-content{
+
+    .text-content {
         text-align: left;
     }
+
     .text-content h1 {
         font-size: 30px;
         margin-left: 15px;
@@ -388,6 +426,7 @@ a{
     .labels .label span {
         font-size: 20px
     }
+
     .lowerImg {
         display: none;
     }
@@ -409,6 +448,7 @@ a{
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        width: 100%;
     }
 
     .card-content {
@@ -416,10 +456,11 @@ a{
         flex-direction: column;
         align-items: center;
         margin: 0;
+        width:100%;
     }
 
     .card {
-        width: 400%;
+        width: auto%;
         height: auto;
         font-family: Lexend;
     }
